feat: adiciona cadastro e login de usuario com JWT
